Wed May 13 17:10:37 2015  Masaki Matsushita <glass.saga@gmail.com>

	* enum.c (enum_to_a): revert r50457.
	  it requires recursion check.
	  then, it doesn't make performance improvement.
	  [Bug #11130] [Feature #9118]

Wed May 13 11:13:40 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parse_gvar): separate message for gvar without
	  non-space characters from message for invalid identifiers.

Tue May 12 22:18:27 2015  Masaki Matsushita <glass.saga@gmail.com>

	* enum.c (enum_to_a): fix incompatibility introduced in r50457.
	  [Bug #11130]

	* test/ruby/test_enum.rb: test for above.

Tue May 12 17:08:03 2015  Koichi Sasada  <ko1@atdot.net>

	* method.h: remove unused declaration.

Mon May 11 10:58:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: Update minitest-5.6.1 and power_assert-0.2.3.

Mon May 11 00:20:31 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (Data_Make_Struct, TypedData_Make_Struct):
	  allocate wrapper data object before allocating DATA_PTR to get
	  rid of possible memory leak when the former failed.

Sun May 10 21:32:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_mark_children): call dmark function for non-NULL
	  pointers only, so that DATA_PTR can be NULL safely now.

Sun May 10 16:23:58 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* proc.c (proc_binding): fix segmentation fault on marking phase.
	  envptr of newenvval should not be NULL.

	  You can reproduce by
	   make test-all TESTS='--gc-stress -n test_to_proc_binding ruby/test_method.rb'

Sun May 10 12:41:18 2015  Masaki Matsushita <glass.saga@gmail.com>

	* ext/zlib/zlib.c (rb_gzreader_external_encoding):
	  define GzipReader#external_encoding.
	  [Bug #10900]

	* test/zlib/test_zlib.rb: test for above.

Sun May 10 11:57:48 2015  Masaki Matsushita <glass.saga@gmail.com>

	* ext/win32ole/win32ole_variant.c: fix typo "indicies".
	  the patch is from davydovanton <antondavydov.o at gmail.com>.
	  [fix GH-892]
