@@ -1,3 +1,8 @@
+Thu May 14 15:54:13 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
+
+	* ext/pathname/lib/pathname.rb: Remove condition of RUBY_VERSION <= 1.9.
+	  [Feature #11082]
+
 Wed May 13 17:10:37 2015  Masaki Matsushita <glass.saga@gmail.com>
 
 	* enum.c (enum_to_a): revert r50457.
